@@ -38,16 +38,7 @@ public class RelationshipAnalysisService {
     private final PartnerPersonaRepository personaRepository;
     private final UserRepository userRepository;
     private final CoupleService coupleService;
-
-    private static final Set<String> POSITIVE_KEYWORDS = Set.of(
-            "love", "miss", "happy", "amazing", "beautiful", "thank",
-            "grateful", "proud", "exciting", "together", "kiss", "heart",
-            "wonderful", "sweet", "cute", "care", "adore", "treasure");
-
-    private static final Set<String> CONFLICT_KEYWORDS = Set.of(
-            "angry", "hate", "upset", "frustrated", "fight", "stop",
-            "leave", "ignore", "hurt", "disappointed", "annoyed", "tired",
-            "stupid", "awful", "worst", "never", "always blame");
+    private final com.fasterxml.jackson.databind.ObjectMapper objectMapper;
 
     @Async
     @Transactional
@@ -71,17 +62,19 @@ public class RelationshipAnalysisService {
             return;
         }
 
-        // Compute scores
+        // 1. Core Metrics
         double avgRT = computeAvgResponseTime(messages);
-        int positiveScore = computeSentimentScore(messages, POSITIVE_KEYWORDS);
-        int conflictScore = computeSentimentScore(messages, CONFLICT_KEYWORDS);
-
         int callCount = calls.size();
         int totalCallMins = calls.stream().mapToInt(CallLog::getDurationSeconds).sum() / 60;
 
+        // 2. Advanced Sentiment Analysis via LLM
+        Map<String, Integer> sentiment = analyzeSentimentWithAi(messages);
+        int positiveScore = sentiment.getOrDefault("positivity", 50);
+        int conflictScore = sentiment.getOrDefault("conflict", 20);
+
         int healthScore = computeHealthScore(msgCount, avgRT, positiveScore, conflictScore, callCount, totalCallMins);
 
-        // Save metrics
+        // 3. Save metrics
         RelationshipMetrics metrics = RelationshipMetrics.builder()
                 .coupleId(coupleId)
                 .periodStart(weekStart)
@@ -95,56 +88,76 @@ public class RelationshipAnalysisService {
                 .build();
         metricsRepository.save(metrics);
 
-        // Update Partner Personas for both partners
+        // 4. Update Partner Personas
         generatePartnerPersonas(coupleId, messages);
 
-        // Generate AI insight via OpenAI
+        // 5. Generate AI insight
         try {
             String prompt = buildInsightPrompt(msgCount, avgRT, positiveScore, conflictScore, healthScore, callCount,
                     totalCallMins);
             String aiResponse = openAiService.chatCompletion(prompt);
 
+            // Expected format: {"summary": "...", "suggestions": ["...", "..."]}
+            String cleanedJson = extractJson(aiResponse);
+            var responseNode = objectMapper.readTree(cleanedJson);
+
             AiInsight insight = AiInsight.builder()
                     .coupleId(coupleId)
                     .weekStart(weekStart)
                     .healthScore(healthScore)
-                    .summary(extractSummary(aiResponse))
-                    .suggestions(extractSuggestions(aiResponse))
+                    .summary(responseNode.has("summary") ? responseNode.get("summary").asText() : "Analysis pending")
+                    .suggestions(responseNode.has("suggestions") ? responseNode.get("suggestions").toString() : "[]")
                     .build();
             insightRepository.save(insight);
             log.info("Insight generated for couple {} | health={}", coupleId, healthScore);
         } catch (Exception e) {
             log.error("Failed to generate AI insight for couple {}: {}", coupleId, e.getMessage());
-            // Save insight without AI summary
-            AiInsight insight = AiInsight.builder()
-                    .coupleId(coupleId)
-                    .weekStart(weekStart)
-                    .healthScore(healthScore)
-                    .summary("Analysis complete for this week.")
-                    .suggestions("Keep communicating regularly and express appreciation daily.")
-                    .build();
-            insightRepository.save(insight);
+            // Safe fallback
+            saveFallbackInsight(coupleId, weekStart, healthScore);
+        }
+    }
+
+    private Map<String, Integer> analyzeSentimentWithAi(List<com.couplespace.entity.Message> messages) {
+        String recentTraffic = messages.stream()
+                .map(m -> m.getSenderId() + ": " + m.getContent())
+                .limit(40)
+                .collect(Collectors.joining("\n"));
+
+        String prompt = """
+                Analyze the following relationship chat log.
+                Rate the overall positivity and conflict intensity.
+
+                Chat Log:
+                %s
+
+                Return ONLY a JSON object: {"positivity": 0-100, "conflict": 0-100}
+                """.formatted(recentTraffic);
+
+        try {
+            String response = openAiService.chatCompletion(prompt);
+            String cleanedJson = extractJson(response);
+            var node = objectMapper.readTree(cleanedJson);
+            Map<String, Integer> result = new HashMap<>();
+            result.put("positivity", node.has("positivity") ? node.get("positivity").asInt() : 70);
+            result.put("conflict", node.has("conflict") ? node.get("conflict").asInt() : 10);
+            return result;
+        } catch (Exception e) {
+            log.error("LLM Sentiment analysis failed: {}", e.getMessage());
+            return Map.of("positivity", 70, "conflict", 10); // Default neutral/positive
         }
     }
 
     public int computeHealthScore(int msgCount, double avgRTMins, int positiveScore, int conflictScore, int callCount,
             int callMins) {
-        double freqScore = Math.min(msgCount / 2.0, 30); // max 30
-        double responseScore = Math.max(0, 25 - avgRTMins); // max 25
-        double posPoints = positiveScore * 0.30; // max 30
-        double conflictPenalty = conflictScore * 0.15; // max -15
+        double freqScore = Math.min(msgCount / 2.0, 30);
+        double responseScore = Math.max(0, 25 - avgRTMins);
+        double posPoints = positiveScore * 0.30;
+        double conflictPenalty = conflictScore * 0.20;
 
-        // Add call bonus: 1 point per call (max 5) + 1 point per 10 mins (max 5)
         double callBonus = Math.min(callCount, 5) + Math.min(callMins / 10.0, 5);
 
         return (int) Math.max(0,
                 Math.min(100, freqScore + responseScore + posPoints - conflictPenalty + callBonus + 10));
-    }
-
-    public int calculateVibeMatch(UUID coupleId) {
-        // Logic to compare onboarding responses and return a match score
-        // For now, return a placeholder that we'll calculate based on actual data
-        return 85;
     }
 
     private double computeAvgResponseTime(List<com.couplespace.entity.Message> messages) {
@@ -157,7 +170,7 @@ public class RelationshipAnalysisService {
             var curr = messages.get(i);
             if (!prev.getSenderId().equals(curr.getSenderId())) {
                 long mins = Duration.between(prev.getCreatedAt(), curr.getCreatedAt()).toMinutes();
-                if (mins >= 0 && mins < 1440) { // ignore gaps > 1 day
+                if (mins >= 0 && mins < 1440) {
                     total += mins;
                     count++;
                 }
@@ -166,32 +179,21 @@ public class RelationshipAnalysisService {
         return count > 0 ? total / count : 0;
     }
 
-    private int computeSentimentScore(List<com.couplespace.entity.Message> messages, Set<String> keywords) {
-        long matched = messages.stream()
-                .filter(m -> m.getContent() != null)
-                .filter(m -> keywords.stream().anyMatch(
-                        kw -> m.getContent().toLowerCase().contains(kw)))
-                .count();
-        return (int) Math.min(100, (matched * 100) / Math.max(1, messages.size()));
-    }
-
     private String buildInsightPrompt(int msgCount, double avgRT, int positive, int conflict, int health, int callCount,
             int callMins) {
         return """
-                You are an expert relationship psychologist. Analyze these weekly metrics:
-                - Messages exchanged: %d
-                - Average response time: %.1f minutes
-                - Positivity score: %d/100
-                - Conflict indicator: %d/100
-                - Calls: %d total, %d minutes combined
-                - Overall health score: %d/100
+                You are a premium relationship analyst. Deeply analyze these metrics:
+                - Messages: %d, Response Time: %.1f min
+                - Positivity: %d, Conflict: %d
+                - Calls: %d (%d mins)
+                - Score: %d
 
-                Provide a warm, addictive, and deeply personal analysis in exactly two sections:
-                SUMMARY: (2-3 sentences about the relationship state this week. Be specific and encouraging.)
-                SUGGESTIONS:
-                1. (actionable tip for deeper connection)
-                2. (tip based on communication style)
-                3. (a "challenge" for the couple this week)
+                Generate a summary and exactly 3 suggestions.
+                Return ONLY valid JSON:
+                {
+                  "summary": "cinematic 2-3 sentence analysis",
+                  "suggestions": ["specific tip 1", "specific tip 2", "specific tip 3"]
+                }
                 """.formatted(msgCount, avgRT, positive, conflict, callCount, callMins, health);
     }
 
@@ -205,78 +207,68 @@ public class RelationshipAnalysisService {
 
             var partnerMsgs = messages.stream()
                     .filter(m -> m.getSenderId().equals(partner.getUserId()))
-                    .map(m -> m.getContent())
+                    .map(com.couplespace.entity.Message::getContent)
                     .filter(Objects::nonNull)
-                    .limit(50) // Analyze last 50 messages
-                    .toList();
+                    .limit(50)
+                    .collect(Collectors.toList());
 
             if (partnerMsgs.isEmpty())
                 continue;
 
             try {
                 String prompt = """
-                        Analyze these recent messages from user '%s' in a relationship app:
+                        Analyze messages from '%s':
                         %s
 
-                        Return a JSON object with:
-                        - communicationStyle: (a creative title like 'The Deep Thinker', 'The Playful Tease', etc.)
-                        - loveLanguage: (top hypothesized love language)
-                        - aura: (a short vibe description like 'Gentle and Supporting' or 'Radiant and Passionate')
-                        - traitList: (comma-separated list of 3 personality descriptors)
+                        Return ONLY valid JSON:
+                        {
+                          "style": "The Playful Romantic",
+                          "loveLanguage": "Words of Affirmation",
+                          "aura": "Gentle and Passionate",
+                          "traits": "kind, expressive, loyal"
+                        }
                         """.formatted(partner.getName(), String.join("\n", partnerMsgs));
 
                 String response = openAiService.chatCompletion(prompt);
+                String cleanedJson = extractJson(response);
+                var node = objectMapper.readTree(cleanedJson);
 
-                // Simple parsing (could be more robust with Jackson)
-                PartnerPersona persona = personaRepository.findByUserId(partner.getUserId())
-                        .orElse(PartnerPersona.builder()
-                                .userId(partner.getUserId())
-                                .coupleId(coupleId)
-                                .build());
+                var persona = personaRepository.findByUserId(partner.getUserId())
+                        .orElse(PartnerPersona.builder().userId(partner.getUserId()).coupleId(coupleId).build());
 
-                persona.setCommunicationStyle(parseValue(response, "communicationStyle"));
-                persona.setPrimaryLoveLanguage(parseValue(response, "loveLanguage"));
-                persona.setAura(parseValue(response, "aura"));
-                persona.setTraits(parseValue(response, "traitList"));
+                persona.setCommunicationStyle(node.has("style") ? node.get("style").asText() : "Balanced");
+                persona.setPrimaryLoveLanguage(
+                        node.has("loveLanguage") ? node.get("loveLanguage").asText() : "Affirmation");
+                persona.setAura(node.has("aura") ? node.get("aura").asText() : "Warm");
+                persona.setTraits(node.has("traits") ? node.get("traits").asText() : "kind, expressive");
 
                 personaRepository.save(persona);
             } catch (Exception e) {
-                log.error("Failed to generate persona for {}: {}", partner.getName(), e.getMessage());
+                log.error("Persona error: {}", e.getMessage());
             }
         }
     }
 
-    private String parseValue(String json, String key) {
-        try {
-            int keyIdx = json.indexOf("\"" + key + "\":");
-            if (keyIdx < 0)
-                return "N/A";
-            int startIdx = json.indexOf("\"", keyIdx + key.length() + 3) + 1;
-            int endIdx = json.indexOf("\"", startIdx);
-            return json.substring(startIdx, endIdx);
-        } catch (Exception e) {
-            return "N/A";
-        }
+    private void saveFallbackInsight(UUID coupleId, LocalDate weekStart, int healthScore) {
+        AiInsight insight = AiInsight.builder()
+                .coupleId(coupleId)
+                .weekStart(weekStart)
+                .healthScore(healthScore)
+                .summary("We're still gathering insights from your beautiful journey this week.")
+                .suggestions(
+                        "[\"Keep the conversation flowing\", \"Share a small wins today\", \"Tell them one thing you appreciate\"]")
+                .build();
+        insightRepository.save(insight);
     }
 
-    private String extractSummary(String aiResponse) {
-        if (aiResponse == null)
-            return "";
-        int summaryIdx = aiResponse.indexOf("SUMMARY:");
-        int suggIdx = aiResponse.indexOf("SUGGESTIONS:");
-        if (summaryIdx >= 0 && suggIdx > summaryIdx) {
-            return aiResponse.substring(summaryIdx + 8, suggIdx).trim();
+    private String extractJson(String text) {
+        if (text == null)
+            return "{}";
+        int start = text.indexOf("{");
+        int end = text.lastIndexOf("}");
+        if (start != -1 && end != -1 && end > start) {
+            return text.substring(start, end + 1);
         }
-        return aiResponse.length() > 300 ? aiResponse.substring(0, 300) : aiResponse;
-    }
-
-    private String extractSuggestions(String aiResponse) {
-        if (aiResponse == null)
-            return "";
-        int suggIdx = aiResponse.indexOf("SUGGESTIONS:");
-        if (suggIdx >= 0) {
-            return aiResponse.substring(suggIdx + 12).trim();
-        }
-        return "";
+        return "{}";
     }
 }
